--- a/cpp/22.02.0.md
+++ b/cpp/22.02.0.md
@@ -22,7 +22,7 @@
   to be available on most platforms. In order to build this SDK, you need:
 </p>
 <ul dir="auto">
-  <li>a C++ compiler with C++14 support</li>
+  <li>a C++ compiler with C++11 support</li>
   <li>libcurl (with openssl) and its headers if you are on *nix</li>
   <li>cmake &gt;= 3.13</li>
 </ul>
@@ -65,7 +65,7 @@ make ./countly-tests   # run unit test<br>make ./countly-sample  # run sample ap
 <p>
   The shortest way to initiate the SDK is with this code snippet:
 </p>
-<pre><span><code>cly::Countly&amp; countly = cly::<span class="pl-c1">Countly::getInstance</span>();<br>countly.<span class="pl-c1">setDeviceID</span>(<span class="pl-s"><span class="pl-pds">"</span>test-device-id<span class="pl-pds">"</span></span>);<br>countly.s<span class="pl-c1">tart</span>(<span class="pl-s"><span class="pl-pds">"</span>YOUR_APP_KEY<span class="pl-pds">"</span></span>, <span class="pl-s"><span class="pl-pds">"</span>https://try.count.ly<span class="pl-pds">"</span></span>, <span class="pl-c1">443, true</span>);</code></span></pre>
+<pre><span><code>Countly&amp; countly = <span class="pl-c1">Countly::getInstance</span>();<br>countly.<span class="pl-c1">setDeviceID</span>(<span class="pl-s"><span class="pl-pds">"</span>test-device-id<span class="pl-pds">"</span></span>);<br>countly.s<span class="pl-c1">tart</span>(<span class="pl-s"><span class="pl-pds">"</span>YOUR_APP_KEY<span class="pl-pds">"</span></span>, <span class="pl-s"><span class="pl-pds">"</span>https://try.count.ly<span class="pl-pds">"</span></span>, <span class="pl-c1">443, true</span>);</code></span></pre>
 <p>
   It is there that you provide your appKey, and your Countly server URL. For more
   information on how to acquire you application key (appKey) and server URL, check
@@ -95,7 +95,7 @@ make ./countly-tests   # run unit test<br>make ./countly-sample  # run sample ap
   on the <code><span class="pl-c1">Counlty</span></code>&nbsp;object to enable
   logging:
 </p>
-<pre><span class="pl-c1"><span class="pl-k"><code>void<span> </span><span class="pl-en">printLog</span><span>(cly::Countly::LogLevel level, </span>const<span> string&amp; msg) {...}<br></span>...<br><br>void<span> (*logger_function)(cly::Countly::LogLevel level, </span>const<span> std::string&amp; message);</span><br><span>logger_function = printLog;</span><br><span>cly::Countly::getInstance().setLogger(logger_function);</span></code></span></span></pre>
+<pre><span class="pl-c1"><span class="pl-k"><code>void<span> </span><span class="pl-en">printLog</span><span>(Countly::LogLevel level, </span>const<span> string&amp; msg) {...}<br></span>...<br><br>void<span> (*logger_function)(Countly::LogLevel level, </span>const<span> std::string&amp; message);</span><br><span>logger_function = printLog;</span><br><span>Countly::getInstance().setLogger(logger_function);</span></code></span></span></pre>
 <h2 id="device-id" class="anchor-heading">Device ID</h2>
 <p>
   <span>All tracked information is tied to a "device ID". A device ID is a unique identifier for your users.</span>
@@ -104,13 +104,13 @@ make ./countly-tests   # run unit test<br>make ./countly-sample  # run sample ap
   <span>You have to specify the device ID by yourself (it has to be unique for each of your users). It may be an email or some other internal ID used by your other systems.</span>
 </p>
 <div>
-  <pre><span><code><span class="pl-c1">cly::Countly::getInstance().setDeviceID("UNIQUE_DEVICE_ID");</span></code></span></pre>
+  <pre><span><code><span class="pl-c1">Countly::getInstance().setDeviceID("UNIQUE_DEVICE_ID");</span></code></span></pre>
 </div>
 <h2 class="c-message_attachment__row">SDK notes</h2>
 <p>
   To access the Countly Global Instance use the following code snippet:
 </p>
-<pre><code><span class="pl-c1">cly::Countly::getInstance<span>().</span></span></code></pre>
+<pre><code><span class="pl-c1">Countly::getInstance<span>().</span></span></code></pre>
 <h1>Events</h1>
 <p>
   <span style="font-weight: 400;">An </span><a href="http://resources.count.ly/docs/custom-events"><span style="font-weight: 400;">event</span></a><span style="font-weight: 400;"> is any type of action that you can send to a Countly instance, e.g. purchases, changed settings, view enabled, and so on, letting you get valuable information about your application.</span>
@@ -171,23 +171,23 @@ make ./countly-tests   # run unit test<br>make ./countly-sample  # run sample ap
 <p>
   <strong>1. Event key and count</strong>
 </p>
-<pre><code class="java"><span class="pl-c1">cly::Countly::getInstance</span><span>()</span>.<span>RecordEvent</span>("purchase", 1);</code></pre>
+<pre><code class="java"><span class="pl-c1">Countly::getInstance</span><span>()</span>.<span>RecordEvent</span>("purchase", 1);</code></pre>
 <p>
   <strong>2. Event key, count, and sum</strong>
 </p>
-<pre><code class="java"><span class="pl-c1">cly::Countly::getInstance</span><span>()</span>.<span>RecordEvent</span>("purchase", 1, 0.99);</code></pre>
+<pre><code class="java"><span class="pl-c1">Countly::getInstance</span><span>()</span>.<span>RecordEvent</span>("purchase", 1, 0.99);</code></pre>
 <p>
   <strong>3. Event key and count with segmentation(s)</strong>
 </p>
-<pre><code class="java">std::map&lt;std::string, std::string&gt; segmentation;<br>segmentation["country"] = "Germany";<br><br><span class="pl-c1">cly::Countly::getInstance</span><span>()</span>.<span>RecordEvent</span>("purchase", segmentation, 1);<br></code></pre>
+<pre><code class="java">std::map&lt;std::string, std::string&gt; segmentation;<br>segmentation["country"] = "Germany";<br><br><span class="pl-c1">Countly::getInstance</span><span>()</span>.<span>RecordEvent</span>("purchase", segmentation, 1);<br></code></pre>
 <p>
   <strong>4. Event key, count, and sum with segmentation(s)</strong>
 </p>
-<pre><code class="java">std::map&lt;std::string, std::string&gt; segmentation;<br>segmentation["country"] = "Germany";<br><br><span class="pl-c1">cly::Countly::getInstance</span><span>()</span>.<span>RecordEvent</span>("purchase", segmentation, 1, 0.99);</code></pre>
+<pre><code class="java">std::map&lt;std::string, std::string&gt; segmentation;<br>segmentation["country"] = "Germany";<br><br><span class="pl-c1">Countly::getInstance</span><span>()</span>.<span>RecordEvent</span>("purchase", segmentation, 1, 0.99);</code></pre>
 <p>
   <strong>5. Event key, count, sum, and duration with segmentation(s)</strong>
 </p>
-<pre><code class="java">std::map&lt;std::string, std::string&gt; segmentation;<br>segmentation["country"] = "Germany";<br><br><span class="pl-c1">cly::Countly::getInstance</span><span>()</span>.<span>RecordEvent</span>("purchase", segmentation, 1, 0.99, 60.0);<br></code></pre>
+<pre><code class="java">std::map&lt;std::string, std::string&gt; segmentation;<br>segmentation["country"] = "Germany";<br><br><span class="pl-c1">Countly::getInstance</span><span>()</span>.<span>RecordEvent</span>("purchase", segmentation, 1, 0.99, 60.0);<br></code></pre>
 <p>
   <span style="font-weight: 400;">These are only a few examples of what you can do with Events. You may go beyond those examples and use country, app_version, game_level, time_of_day, and any other segmentation of your choice that will provide you with valuable insights.</span>
 </p>
@@ -195,13 +195,13 @@ make ./countly-tests   # run unit test<br>make ./countly-sample  # run sample ap
 <p>
   <span>It's possible to create timed events by defining a start and a stop moment.</span>
 </p>
-<pre><code class="java hljs">cly::Event event("Some event", 1);</code><br><span class="hljs-comment"><br>//start some event</span><br><code class="java hljs">event.startTimer();<br></code><span class="hljs-comment">//wait some time<br><br></span><span class="hljs-comment">//end the timer and record event</span><br><code class="java hljs">event.stopTimer();<br>
-cly::Countly.getInstance().addEvent(event);</code></pre>
+<pre><code class="java hljs">Event event("Some event", 1);</code><br><span class="hljs-comment"><br>//start some event</span><br><code class="java hljs">event.startTimer();<br></code><span class="hljs-comment">//wait some time<br><br></span><span class="hljs-comment">//end the timer and record event</span><br><code class="java hljs">event.stopTimer();<br>
+Countly.getInstance().addEvent(event);</code></pre>
 <p>
   <span>You may also provide additional information e.g segmentation, count, and sum.</span>
 </p>
 <pre><span class="hljs-comment">//event with count and sum</span>
-<code class="java hljs">cly::Event event("Some event", 1, 0.99);</code><br><span class="hljs-comment">//add segmentation to event</span><br><code class="java hljs">event.addSegmentation("country", "Germany");</code><br>...<br><br><code class="java hljs">cly::Countly.getInstance().addEvent(event);</code></pre>
+<code class="java hljs">Event event("Some event", 1, 0.99);</code><br><span class="hljs-comment">//add segmentation to event</span><br><code class="java hljs">event.addSegmentation("country", "Germany");</code><br>...<br><br><code class="java hljs">Countly.getInstance().addEvent(event);</code></pre>
 <h1>Sessions</h1>
 <h2 id="automatic-session-tracking&nbsp;" class="anchor-heading">
   <span>Automatic session tracking&nbsp;</span>
@@ -212,7 +212,7 @@ cly::Countly.getInstance().addEvent(event);</code></pre>
   60 seconds. This value is configurable during and after initialization.&nbsp;<br>
   Example:
 </p>
-<pre><span style="font-weight: 400;"><code class="java"><span class="pl-c1">cly::Countly::getInstance</span><span>()</span>.setAutomaticSessionUpdateInterval(10);<span></span></code></span></pre>
+<pre><span style="font-weight: 400;"><code class="java"><span class="pl-c1">Countly::getInstance</span><span>()</span>.setAutomaticSessionUpdateInterval(10);<span></span></code></span></pre>
 <p>
   <span style="font-weight: 400;"><span>The SDK ends the current session whenever the user quits the app.</span></span>
 </p>
@@ -227,11 +227,11 @@ cly::Countly.getInstance().addEvent(event);</code></pre>
 <p>
   <span>In case your application authenticates users, you might want to change the ID to the one in your backend after he has logged in. This helps you identify a specific user with a specific ID on a device he logs in, and the same scenario can also be used in cases this user logs in using a different way (e.g another tablet, another mobile phone, or web). In this case, any data stored in your Countly server database associated with the current device ID will be transferred (merged) into the user profile with the device id you specified in the following method call:</span>
 </p>
-<pre><span style="font-weight: 400;"><code class="java"><span class="pl-c1">cly::Countly::getInstance</span><span>().setDeviceID("new-device-id", true);</span></code></span></pre>
+<pre><span style="font-weight: 400;"><code class="java"><span class="pl-c1">Countly::getInstance</span><span>().setDeviceID("new-device-id", true);</span></code></span></pre>
 <p>
   <span>You might want to track information about another separate user that starts using your app (changing apps account), or your app enters a state where you no longer can verify the identity of the current user (user logs out). In that case, you can change the current device ID to a new one without merging their data. You would call:</span>
 </p>
-<pre><span style="font-weight: 400;"><code class="java"><span class="pl-c1">cly::Countly::getInstance</span><span>().setDeviceID("new-device-id", false);</span></code></span></pre>
+<pre><span style="font-weight: 400;"><code class="java"><span class="pl-c1">Countly::getInstance</span><span>().setDeviceID("new-device-id", false);</span></code></span></pre>
 <p>
   <span>Doing it this way, will not merge the previously acquired data with the new id.</span><span></span><span></span>
 </p>
@@ -248,12 +248,12 @@ cly::Countly.getInstance().addEvent(event);</code></pre>
   report which views a user has visited with the duration of that visit. To report
   a screen from your app to the Countly server, you can use the following method:
 </p>
-<pre><span style="font-weight: 400;"><code><span>std::string&amp; viewID = cly::Countly::getInstance().views()("Home Scene");</span></code></span></pre>
+<pre><span style="font-weight: 400;"><code><span>std::string&amp; viewID = Countly::getInstance().views()("Home Scene");</span></code></span></pre>
 <p>
   While tracking views manually, you may add your custom segmentation to those
   views like this:
 </p>
-<pre><span><code>std::map&lt;std::string, std::string&gt; segmentation = {<br>{"cats", "123"},<br>{"moons", "9.98"},<br>{"Moose", "deer"},<br>};<br><br><span class="c-mrkdwn__br" data-stringify-type="paragraph-break"></span>std::string&amp; viewID = cly::Countly::getInstance().views().openView("Home Scene", segmentation);</code></span></pre>
+<pre><span><code>std::map&lt;std::string, std::string&gt; segmentation = {<br>{"cats", "123"},<br>{"moons", "9.98"},<br>{"Moose", "deer"},<br>};<br><br><span class="c-mrkdwn__br" data-stringify-type="paragraph-break"></span>std::string&amp; viewID = Countly::getInstance().views().openView("Home Scene", segmentation);</code></span></pre>
 <p>
   When the screen closes you can report it to the server by using one of the following
   methods:
@@ -268,12 +268,12 @@ cly::Countly.getInstance().addEvent(event);</code></pre>
   <span><span class="hljs-keyword">std::string</span>. You can use this ID to close a view.</span>
 </p>
 <p>For example:</p>
-<pre><span><code>std::string&amp; viewID = cly::Countly::getInstance().views().openView("Home Scene");<br>...<br>cly::Countly::getInstance().views().closeViewWithID(viewId);</code></span></pre>
+<pre><span><code>std::string&amp; viewID = Countly::getInstance().views().openView("Home Scene");<br>...<br>Countly::getInstance().views().closeViewWithID(viewId);</code></span></pre>
 <p>
   <strong>2. Ending a view with a view name:<br></strong>You may close a view by
   its name using the following method:
 </p>
-<pre><span><code>cly::Countly::getInstance().views().closeViewWithName("Home Scene");</code></span></pre>
+<pre><span><code>Countly::getInstance().views().closeViewWithName("Home Scene");</code></span></pre>
 <p>
   <span>To review the resulting view data, go to the </span><span><code>Analytics &gt; Views</code> section in your Countly server</span><span>. For more information on how to utilize view tracking data to its fullest potential, click </span><a href="http://resources.count.ly/docs/view-analytics"><span>here</span></a><span>.</span>
 </p>
@@ -304,7 +304,7 @@ cly::Countly.getInstance().addEvent(event);</code></pre>
 <p>
   <span>Example:</span>
 </p>
-<pre><code class="hljs cs"><span><span class="hljs-keyword">string</span> countryCode = </span><span class="hljs-string">"us"</span><span>;<br><span class="hljs-keyword">string</span> city = </span><span class="hljs-string">"Houston"</span><span>;<br><span class="hljs-keyword">string</span> latitude = </span><span class="hljs-string">"29.634933"</span><span>; <br><span class="hljs-keyword">string</span> longitude = </span><span class="hljs-string">"-95.220255"</span><span>; <br><span class="hljs-keyword">string</span> ipAddress = "192.168.0.1"</span><span>;</span>&nbsp;<br><br><span>cly::Countly::getInstance()</span>.s<span>etLocation</span>(<span>countryCode, city, latitude + </span><span class="hljs-string">","</span><span> + longitude, ipAddress</span>);</code></pre>
+<pre><code class="hljs cs"><span><span class="hljs-keyword">string</span> countryCode = </span><span class="hljs-string">"us"</span><span>;<br><span class="hljs-keyword">string</span> city = </span><span class="hljs-string">"Houston"</span><span>;<br><span class="hljs-keyword">string</span> latitude = </span><span class="hljs-string">"29.634933"</span><span>; <br><span class="hljs-keyword">string</span> longitude = </span><span class="hljs-string">"-95.220255"</span><span>; <br><span class="hljs-keyword">string</span> ipAddress = "192.168.0.1"</span><span>;</span>&nbsp;<br><br><span>Countly::getInstance()</span>.s<span>etLocation</span>(<span>countryCode, city, latitude + </span><span class="hljs-string">","</span><span> + longitude, ipAddress</span>);</code></pre>
 <p>
   <span>Note that the IP address will only be updated if set through the init process.</span>
 </p>
@@ -324,14 +324,14 @@ cly::Countly.getInstance().addEvent(event);</code></pre>
 <p>
   To download Remote Config, call <code>updateRemoteConfig()</code>.&nbsp;
 </p>
-<pre><code>cly::Countly.<span>getInstance</span>().updateRemoteConfig();</code></pre>
+<pre><code>Countly.<span>getInstance</span>().updateRemoteConfig();</code></pre>
 <h2>Accessing remote config values</h2>
 <p>
   To access the stored config,&nbsp; call
-  <code>cly::Countly.getInstance().getRemoteConfigValue(const std::string&amp; key)</code>.
+  <code>Countly.getInstance().getRemoteConfigValue(const std::string&amp; key)</code>.
   It will return <code>null</code> if there isn't any config stored.
 </p>
-<pre><code>cly::Countly.getInstance().getRemoteConfigValue("Key");</code></pre>
+<pre><code>Countly.getInstance().getRemoteConfigValue("Key");</code></pre>
 <p>
   <span>It returns a value of the type <code>json</code></span><span>.&nbsp;</span>
 </p>
@@ -401,27 +401,27 @@ cly::Countly.getInstance().addEvent(event);</code></pre>
   The SDK allows you to upload user details using the methods listed below.
 </p>
 <p>Example:</p>
-<pre><code>std::map&lt;std::string, std::string&gt; userdetail = { <br>{"name", "Full name"}, <br>{"username", "username123"},<br>{"email", "useremail@email.com"},<br>{"phone", "222-222-222"},<br>{"picture", "http://webresizer.com/images2/bird1_after.jpg"},<br>{"gender", "M"},<br>{"byear", "1991"},<br>{"organization", "Organization"},<br>};<br>cly::Countly.getInstance().setUserDetails(userdetail);</code></pre>
+<pre><code>std::map&lt;std::string, std::string&gt; userdetail = { <br>{"name", "Full name"}, <br>{"username", "username123"},<br>{"email", "useremail@email.com"},<br>{"phone", "222-222-222"},<br>{"picture", "http://webresizer.com/images2/bird1_after.jpg"},<br>{"gender", "M"},<br>{"byear", "1991"},<br>{"organization", "Organization"},<br>};<br>Countly.getInstance().setUserDetails(userdetail);</code></pre>
 <h2>Setting custom values</h2>
 <p>
   The SDK gives you the flexibility to send only the custom data to Countly servers,
   even when you don’t want to send other user-related data.
 </p>
 <p>Example:</p>
-<pre><code>std::map&lt;std::string, std::string&gt; userdetail = { <br>{"Height", "5.8"}, <br>{"Mole", "Lower Left Cheek"}<br>};<br><br>cly::Countly.getInstance().setCustomUserDetails(userdetail);</code></pre>
+<pre><code>std::map&lt;std::string, std::string&gt; userdetail = { <br>{"Height", "5.8"}, <br>{"Mole", "Lower Left Cheek"}<br>};<br><br>Countly.getInstance().setCustomUserDetails(userdetail);</code></pre>
 <h2>Setting User picture</h2>
 <p>
   The SDK allows you to set the user's picture URL along with other details using
   the methods listed below.
 </p>
 <p>Example:</p>
-<pre><code>std::map&lt;std::string, std::string&gt; userdetail = { <br>{"name", "Full name"}, <br>{"picture", "http://webresizer.com/images2/bird1_after.jpg"},<br>};<br><br>cly::Counlty.getInstance().setUserDetails(userdetail);</code></pre>
+<pre><code>std::map&lt;std::string, std::string&gt; userdetail = { <br>{"name", "Full name"}, <br>{"picture", "http://webresizer.com/images2/bird1_after.jpg"},<br>};<br><br>Counlty.getInstance().setUserDetails(userdetail);</code></pre>
 <h1>Security and privacy</h1>
 <h2 id="parameter-tampering-protection" class="anchor-heading">Parameter tamper protection</h2>
 <p>
   <span>You may set the optional&nbsp;<code>salt</code></span><span>&nbsp;to be used for calculating the checksum of requested data which will be sent with each request, using the&nbsp;<code>&amp;checksum</code></span><span>&nbsp;field. You will need to set exactly the same&nbsp;<code>salt</code></span><span>&nbsp;on the Countly server. If&nbsp;the&nbsp;<code>salt</code></span><span>&nbsp;on the Countly server is set, all requests would be checked for the validity of the&nbsp;<code>&amp;checksum</code></span><span> the field before being processed.</span>
 </p>
-<pre><code class="java hljs">cly::Countly.getInstance().setSalt("salt");</code></pre>
+<pre><code class="java hljs">Countly.getInstance().setSalt("salt");</code></pre>
 <h1>Other features</h1>
 <h2>Setting event queue threshold</h2>
 <p>
@@ -429,7 +429,7 @@ cly::Countly.getInstance().addEvent(event);</code></pre>
   by the system before they can all be sent together in one request.&nbsp;<br>
   Example:
 </p>
-<pre><code>cly::Counlty.getInstance().SetMaxEventsPerMessage(10);</code></pre>
+<pre><code>Counlty.getInstance().SetMaxEventsPerMessage(10);</code></pre>
 <p>
   Once the threshold limit is reached, the system groups all recorded events and
   sends them to the server.
@@ -452,7 +452,7 @@ cly::Countly.getInstance().addEvent(event);</code></pre>
   <span>2. Set custom SHA-256 method <code>setSha256</code></span>
 </p>
 <p>For example:</p>
-<pre><code class="java hljs">std::string customChecksumCalculator(const std::string&amp; data) {<br>...<br>return result;<br>} </code><br><br><code class="java hljs">cly::Countly&amp; countly = cly::Countly.getInstance();</code><br><code class="java hljs">countly.setSalt("salt");<br>countly.setSha256(customChecksumCalculator);</code></pre>
+<pre><code class="java hljs">std::string customChecksumCalculator(const std::string&amp; data) {<br>...<br>return result;<br>} </code><br><br><code class="java hljs">Countly&amp; countly = Countly.getInstance();</code><br><code class="java hljs">countly.setSalt("salt");<br>countly.setSha256(customChecksumCalculator);</code></pre>
 <h1>FAQ</h1>
 <h2>What information is collected by the SDK</h2>
 <p>
