RN doc : 22.02.0 version added
-- Android intent redirection security section added with allowed package/class names for intent redirection

--- a/react_native_bridged/20.04.md
+++ b/react_native_bridged/20.04.md
@@ -497,7 +497,7 @@ Countly.removeAllConsent();</code></pre>
 </p>
 <pre>Countly.<span>init</span>(<span>SERVER_URL</span>, <span>APP_KEY, "TemporaryDeviceID"</span>)</pre>
 <p>To enable a temporary device ID after init, you would call:</p>
-<pre>Countly.<span>changeDeviceId</span>(Countly."TemporaryDeviceID", <span>ON_SERVER</span>);</pre>
+<pre>Countly.<span>changeDeviceId</span>("TemporaryDeviceID", <span>ON_SERVER</span>);</pre>
 <p>
   &nbsp;<strong>Note:</strong>&nbsp;When passing<span> </span><code>TemporaryDeviceID</code><span>&nbsp;</span>for<span>&nbsp;</span><code>deviceID</code><span>&nbsp;</span>parameter,
   argument for<span>&nbsp;</span><code>onServer</code>parameter does not matter.
