Doing a windows release

--- a/windows/21.11.md
+++ b/windows/21.11.md
@@ -1,10 +1,13 @@
 <p>
   This document explains how to install Countly SDK for Windows desktop applications.
-  It applies to version 22.02.0.
+  It applies to version 21.11.0.
 </p>
 <div class="callout callout--info">
+  <p class="callout__title">
+    <span class="wysiwyg-font-size-large"><strong>Older documentation</strong></span>
+  </p>
   <p>
-    To access the documentation for version 21.11 click&nbsp;<a href="/hc/en-us/articles/11428429151513">here.</a>
+    To access the documentation for version 20.11 click&nbsp;<a href="/hc/en-us/articles/4413138651161">here.</a>
   </p>
 </div>
 <div>
@@ -75,13 +78,6 @@ Countly.Instance.Init(cc);</code></pre>
   of them, there are feature differences. Either with additional function calls
   or with additional fields in the CountlyConfig object.
 </p>
-<div class="callout callout--info">
-  <p>
-    If you are in doubt about the correctness of your Countly SDK integration
-    you can learn about methods to verify it from
-    <a href="https://support.count.ly/hc/en-us/articles/900000908046-Getting-started-with-SDKs#how-to-validate-your-countly-integration" target="blank">here</a>.
-  </p>
-</div>
 <h2 id="enabling-logging" class="anchor-heading">SDK logging / debug mode</h2>
 <p>
   <span>The first thing you should do while integrating our SDK is enable logging. If logging is enabled, then our SDK will print out debug messages about its internal state and encounter problems.</span>
@@ -286,57 +282,24 @@ await Countly.RecordEvent("purchase", 3, 2.97, 122.45, segmentation);</code></pr
 <p>
   <span>These are only a few examples of what you can do with Events. You may go beyond those examples and use country, app_version, time_of_day, and any other segmentation of your choice that will provide you with valuable insights.</span>
 </p>
-<h2>Timed events</h2>
+<h2 id="timed-events" class="anchor-heading">Timed events</h2>
 <p>
-  Timed events are events which gives you the ability to calculate the duration
-  it takes for the event to take place with respect to any arbitrary point you
-  choose. Timed events must be handled manually, where they need a call to start
-  the event and another call to end the event. First call is used to start an internal
-  timer which would continue counting until the second call is used to stop it
-  and record the duration. This second call would end the timer, create an event
-  with the given name and the with the duration from the timer and send it to the
-  event queue. If this second call has not been called or if the app has been closed
-  before calling it, no event would be created. As the timer is stored at the memory
-  of the device, if you close the app before ending the event, you would have to
-  start all over when you open the app later again.
+  <span>Currently, SDK doesn't have any direct mechanism to record timed Events. To record a timed event, you would have to calculate the duration of an event yourself. You could record the timestamp at the start of it and at the end, and then you would pass the calculated duration to Countly when you are recording the event.</span>
 </p>
-<pre><code class="java">string eventName = "Some event";
-
-//start some event with the event name "Some event"
-Countly.Instance.StartEvent(eventName);
-//wait some time
-
-//end the event with the same event name "Some event"
-Countly.Instance.EndEvent(eventName);</code></pre>
 <p>
-  <span>You may also provide additional information when ending an event. In that case, you can provide the segmentation, count, or sum values. The default values for those are "null", 1, and 0.</span>
+  <span>Example:</span>
 </p>
-<pre><code class="java">string eventName = "Some event";
-
-//start some event
-Countly.Instance.StartEvent(eventName);
-//wait some time
-
-Segmentation segmentation = new Segmentation();
-segmentation.Add("wall", "orange");
-
-//end the event while also providing segmentation information
-Countly.Instance.EndEvent(eventName, segmentation);
-</code></pre>
-<p>Here are other options to end timed events:</p>
-<pre><code class="java">//end the event while providing segmentation information and count
-Countly.Instance.EndEvent("timed-event", segmentation, 4);<br><br>//end the event while providing segmentation information, count and sum
-Countly.Instance.EndEvent("timed-event", segmentation, 4, 10);</code></pre>
+<pre><code class="java hljs"><span class="hljs-comment">//At the start of your planned event you would record the start timestamp</span>
+DateTime startTime = DateTime.UtcNow;
+...
+<span class="hljs-comment">//Some time would pass and you would determine that your planned event has ended and you would record how many seconds passed </span>
+<span class="hljs-keyword">double</span> duration = (DateTime.UtcNow - startTime).TotalSeconds; 
+<span class="hljs-comment">//Then you would pass this information when recording a Countly event</span>
+<strong>await</strong> <span>Countly.RecordEvent("purchase", 3, null, duration, null);</span></code></pre>
 <p>
-  You may cancel an already started timed event in case it is not needed anymore:
+  <span>You may provide segmentation, count, and sum while recording a timed event.</span>
 </p>
-<pre><code class="java">//start some event
-Countly.Instance.StartEvent(eventName);
-//wait some time
-
-//cancel the event
-Countly.Instance.CancelEvent(eventName);</code></pre>
-<h2>Consent</h2>
+<h2 id="consent" class="anchor-heading">Consent</h2>
 <p>
   <span>This feature uses&nbsp;<code>Events</code>&nbsp;consent.&nbsp;</span><span>No additional events will be recorded if consent is required and not given.</span>
 </p>
