--- a/react_native_bridged/22.02.md
+++ b/react_native_bridged/22.02.md
@@ -1,13 +1,13 @@
 <p>
   This document will guide you through the process of Countly SDK installation
-  and it applies to version 22.06.X<br>
+  and it applies to version 22.02.0<br>
   Countly is an open source SDK, you can take a look at our SDK code in the
   <a href="https://github.com/Countly/countly-sdk-react-native-bridge" target="_self">Github repo</a>
 </p>
 <div class="callout callout--info">
   <p>
-    To access the documentation for version 22.02.X and older, click
-    <a href="/hc/en-us/articles/11734029520665" target="_self" rel="undefined">here.</a>
+    To access the documentation for version 21.11 and older, click
+    <a href="/hc/en-us/articles/6116239554841" target="_self" rel="undefined">here.</a>
   </p>
 </div>
 <p>
@@ -918,13 +918,15 @@ var data = await Countly.getRemoteConfigValueForKeyP("KeyName");</code></pre>
   all available widgets for a user and another to display a chosen widget.
 </p>
 <p>To get your available widget list, use the call below.</p>
-<pre><code class="javascript">Countly.getFeedbackWidgets(function(retrivedWidgets, error){<br> if (error != null) {<br>  console.log("Error : " + error);<br> }<br> else {<br>  console.log(retrivedWidgets.length)<br> }<br>});</code></pre>
+<pre><code class="javascript">Countly.getAvailableFeedbackWidgets().then((retrivedWidgets) =&gt; {
+},(err) =&gt; {
+});</code></pre>
 <p>
   From the callback, get the list of all available widgets that apply to the current
   device ID.
 </p>
 <p>The objects in the returned list look like this:</p>
-<pre><code class="javascript">{ <br>  "id"   : "WIDGET_ID",<br>  "type" : "WIDGET_TYPE",<br>  "name" : "WIDGET_NAME",<br>}</code></pre>
+<pre><code class="javascript">{ "WIDGET_TYPE" : "WIDGET_ID" }</code></pre>
 <p>
   To determine what kind of widget that is, check the "type" value. The potential
   values are <code class="JavaScript">survey</code> and
@@ -937,7 +939,7 @@ var data = await Countly.getRemoteConfigValueForKeyP("KeyName");</code></pre>
 <p>
   After you have decided which widget you want to display, call the function below.
 </p>
-<pre><code class="javascript">Countly.presentFeedbackWidgetObject(RETRIEVED_WIDGET_OBJECT, "CLOSE_BUTTON_TEXT", function() {<br>  console.log("WidgetshownCallback");<br>},<br>function() {<br>  console.log("WidgetclosedCallabck");<br>})<br></code></pre>
+<pre><code class="javascript">Countly.presentFeedbackWidget("WIDGET_TYPE", "WIDGET_ID", "CLOSE_BUTTON_TEXT");</code></pre>
 <h1>User Profiles</h1>
 <p>
   You can provide Countly any details you may have about your user or visitor.
@@ -1455,9 +1457,9 @@ Countly.setCustomMetrics(customMetric);</code></pre>
   <strong>application</strong> tag.
 </p>
 <pre><code class="xml">&lt;receiver android:name="ly.count.android.sdk.ReferrerReceiver" android:exported="true"&gt;
-  &lt;intent-filter&gt;
-    &lt;action android:name="com.android.vending.INSTALL_REFERRER" /&gt;
-  &lt;/intent-filter&gt;
+	&lt;intent-filter&gt;
+		&lt;action android:name="com.android.vending.INSTALL_REFERRER" /&gt;
+	&lt;/intent-filter&gt;
 &lt;/receiver&gt;</code></pre>
 <p>
   <strong>For more information about how to set up your campaigns, please <a href="https://support.count.ly/hc/en-us/articles/360037639271-Attribution-Analytics">review this documentation</a>.</strong>
