--- a/cpp/22.09.0.md
+++ b/cpp/22.09.0.md
@@ -1,11 +1,11 @@
 <p>
   This document will guide you through the process of SDK installation and it applies
-  to version 23.2.X.
+  to version 22.09.X.
 </p>
 <div class="callout callout--info">
   <p>
     Click
-    <a href="https://support.count.ly/hc/en-us/articles/360037236571-Downloading-and-Installing-SDKs#c-sdks" target="_blank" rel="noopener">here, </a>to
+    <a href="https://support.count.ly/hc/en-us/articles/360037236571-Downloading-and-Installing-SDKs#c++-sdk" target="_self" rel="undefined">here, </a>to
     access the documentation for older SDK versions.
   </p>
 </div>
@@ -89,8 +89,7 @@ make ./countly-tests   # run unit test<br>make ./countly-sample  # run sample ap
 </p>
 <p>
   The third parameter with type<code>int</code> is a virtual port number and it
-  is an optional parameter with a default value of <strong>0 </strong>(expected
-  range is 0 to 65535).<br>
+  is an optional parameter with a default value of <strong>-1</strong>.<br>
   The last <code>bool</code> parameter is also optional with the default value
   of <code>false</code>. When you set this value to <code>true</code> SDK automatically
   extends the session every 60 seconds.
@@ -142,9 +141,12 @@ make ./countly-tests   # run unit test<br>make ./countly-sample  # run sample ap
 </p>
 <pre><code>cly::Countly::getInstance().</code></pre>
 <h1>Crash Reporting</h1>
+<div class="callout callout--warning">
+  <p>This feature requires the minimum SDK version of 22.06.1</p>
+</div>
 <p>
   The Countly SDK for C++ can collect
-  <a style="background-color: #ffffff;" href="http://resources.count.ly/docs/introduction-to-crash-reporting-and-analytics">Crash Reports</a>,
+  <a href="http://resources.count.ly/docs/introduction-to-crash-reporting-and-analytics">Crash Reports</a>,
   which you may examine and resolve later on the server.
 </p>
 <p>
@@ -153,6 +155,9 @@ make ./countly-tests   # run unit test<br>make ./countly-sample  # run sample ap
 </p>
 <pre><code class="java">countly.crash().</code></pre>
 <h2>Handled Exceptions</h2>
+<div class="callout callout--warning">
+  <p>This feature requires the minimum SDK version of 22.06.1</p>
+</div>
 <p>
   You might catch an exception or similar error during your app’s runtime. You
   may also log these handled exceptions to monitor how and when they are happening.
@@ -193,6 +198,9 @@ make ./countly-tests   # run unit test<br>make ./countly-sample  # run sample ap
 </p>
 <pre><code class="java">std::map&lt;std::string, std::any&gt; crashMetrics;<br><br>/*mandatory values*/<br>crashMetrics[<span class="hljs-string">"_os"] = <span class="hljs-string">"Android"; /*your OS info*/<br>crashMetrics[<span class="hljs-string">"_app_version"] = <span class="hljs-string">"22.06.1"; /*SDK version*/<br><br>/*optional values*/<br>crashMetrics[<span class="hljs-string">"_os_version"] = <span class="hljs-string">"4.1";<br>crashMetrics[<span class="hljs-string">"_manufacture"] = <span class="hljs-string">"Samsung"; /*may not be provided for ios or be constant, like Apple*/<br>crashMetrics[<span class="hljs-string">"_device"] = <span class="hljs-string">"Galaxy S4"; /*model for Android, iPhone1,1 etc for iOS*/<br>crashMetrics[<span class="hljs-string">"_resolution"] = <span class="hljs-string">"1900x1080"; /*SDK version*/<br>crashMetrics[<span class="hljs-string">"_cpu"] = <span class="hljs-string">"armv7"; /*type of cpu used on device (for ios will be based on device)*/<br>crashMetrics[<span class="hljs-string">"_opengl"] = <span class="hljs-string">"2.1"; /*version of open gl supported*/<br>crashMetrics[<span class="hljs-string">"_ram_current"] = 1024; /*in megabytes*/<br>crashMetrics[<span class="hljs-string">"_ram_total"] = 4096; /*in megabytes*/<br>crashMetrics[<span class="hljs-string">"_disk_current"] = 3000; /*in megabytes*/<br>crashMetrics[<span class="hljs-string">"_disk_total"] = 10240; /*in megabytes*/<br>crashMetrics[<span class="hljs-string">"_bat"] = 99; /*battery level from 0 to 100*/<br>crashMetrics[<span class="hljs-string">"_orientation"] = <span class="hljs-string">"portrait"; /*in which device was held, landscape, portrait, etc*/<br>crashMetrics[<span class="hljs-string">"_root"] = f<span class="hljs-string">alse; /*true if device is rooted/jailbroken, false or not provided if not*/<br>crashMetrics[<span class="hljs-string">"_online"] = f<span class="hljs-string">alse; /*true if device is connected to the internet (WiFi or 3G), false or not provided if not connected*/<br>crashMetrics[<span class="hljs-string">"_muted"] = f<span class="hljs-string">alse; /*true if volume is off, device is in muted state*/<br>crashMetrics[<span class="hljs-string">"_background"] = f<span class="hljs-string">alse; /*true if app was in background when it crashed*/<br>crashMetrics[<span class="hljs-string">"_run"] = 2000; /*running time since app start in seconds*/</span></span></span></span></span></span></span></span></span></span></span></span></span></span></span></span></span></span></span></span></span></span></span></span></span></span></span></span></span></span></span></span></code></pre>
 <h2>Crash Breadcrumbs</h2>
+<div class="callout callout--warning">
+  <p>This feature requires the minimum SDK version of 22.06.1</p>
+</div>
 <p>
   Throughout your app, you can leave crash breadcrumbs. They are short string logs
   that would ideally describe the previous steps that were taken in your app before
@@ -533,29 +541,15 @@ cly::Countly.getInstance().addEvent(event);</code></span></span></span></pre>
 <h1>Other Features and Notes</h1>
 <h2>Setting Event Queue Threshold</h2>
 <p>
-  Before or after SDK starts, you can set a threshold for the number of events
-  that the system can record internally (on memory or persistently) before they
-  are all sent to the request queue.<br>
+  After SDK init, you may limit the number of events that can be recorded internally
+  by the system before sent together in a single request.<br>
   Example:
 </p>
-<pre><code>cly::Counlty.getInstance().setEventsToRQThreshold(10);</code></pre>
+<pre><code>cly::Counlty.getInstance().SetMaxEventsPerMessage(10);</code></pre>
 <p>
-  When the threshold is reached, the SDK batches all the events in the event queue
-  and sends them to the request queue to be sent to the server in a single request.
-  The default value is set to 100, but you can change it to any whole number between
-  1 to 10000.
+  Once the threshold limit is reached, the system groups all recorded events and
+  sends them to the server.
 </p>
-<h2>Setting Request Queue Processing Batch Size</h2>
-<p>
-  Before or after SDK starts, you can set a threshold for the number of requests
-  the request queue can try sending to the server in one go. If this threshold
-  is high and there are an increased number of requests in the queue, it can prevent
-  the application from closing until it sends all requests to the server. To prevent
-  this from happening, the SDK stops this process whenever the threshold is reached
-  (100 by default) and starts again at the next iteration of the update loop.<br>
-  Example:
-</p>
-<pre><code>cly::Counlty.getInstance().setMaxRQProcessingBatchSize(10);</code></pre>
 <h2 id="SettingUpSQLiteStorage">Setting Up SQLite Storage</h2>
 <p>
   In case you need persistent storage, you would need to build the SDK with that
